assign new batch

--- a/data/yao/assign_annotators_to_batches.ipynb
+++ b/data/yao/assign_annotators_to_batches.ipynb
@@ -2,15 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import random\n",
+    "import re\n",
+    "import json\n",
+    "\n",
     "random.seed(2)\n",
     "\n",
-    "which_wiki = 1\n",
+    "which_wiki = 2\n",
     "\n",
     "# Read in the data\n",
     "df = pd.read_csv(f'all-outputs-new-wiki-{which_wiki}.csv')"
@@ -18,12 +21,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vinayak 15\n",
+      "kelly 15\n",
+      "rachel 15\n",
+      "vishnesh 15\n",
+      "ayush 15\n",
+      "anton 15\n"
+     ]
+    }
+   ],
    "source": [
-    "import json\n",
-    "\n",
     "annotater_dict = json.load(open('annotater_dict-new-wiki-1.json'))\n",
     "id_dict = json.load(open('id_dict-new-wiki-1.json'))\n",
     "\n",
@@ -34,38 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'vinayak': [0, 1, 3, 7, 8, 10, 11, 13, 16, 18, 19, 20, 21, 22, 23],\n",
-       " 'kelly': [0, 3, 4, 5, 9, 12, 13, 14, 15, 17, 23, 24, 25, 26, 28],\n",
-       " 'rachel': [1, 2, 10, 11, 14, 16, 19, 21, 23, 24, 25, 26, 27, 28, 29],\n",
-       " 'vishnesh': [1, 3, 4, 5, 6, 7, 9, 11, 14, 15, 16, 17, 18, 20, 29],\n",
-       " 'ayush': [2, 5, 6, 7, 8, 9, 12, 13, 17, 18, 21, 22, 26, 27, 28],\n",
-       " 'anton': [0, 2, 4, 6, 8, 10, 12, 15, 19, 20, 22, 24, 25, 27, 29]}"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "annotater_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
+    "split_idx = 50\n",
     "\n",
-    "system_list = [\"Human 1 Writing\", \"Human 2 Writing\", \"GPT-3-zero-shot\", \"GPT-3-few-shot\", \"Muss\"]\n",
+    "# Human 1 Writing,Human 1,Human 2 Writing,Human 2,GPT-3-zero-shot,GPT-3-few-shot,Muss,T5-3B,T5-11B\n",
+    "system_list = [\"Human 1 Writing\", \"Human 2 Writing\", \"GPT-3-zero-shot\", \"GPT-3-few-shot\", \"Muss\", \"T5-3B\", \"T5-11B\"]\n",
     "for annotater in annotater_dict:\n",
     "    annotater_batch = []\n",
     "    start_id = 0\n",
@@ -92,22 +82,22 @@
     "                for i, indice in enumerate(indices):\n",
     "                    current_dict[\"simplified_spans\"].append([2, indice, indice+2, i])\n",
     "            \n",
-    "            current_dict[\"system\"] = \"new-wiki-1/\" + system\n",
-    "            annotater_batch.append(current_dict)\n",
+    "            current_dict[\"system\"] = f\"new-wiki-{which_wiki}/{system}\"\n",
+    "            annotater_batch += [current_dict]\n",
     "            start_id += 1\n",
     "\n",
     "    # split annotater_batch into 2 batches first 40 and last 35\n",
-    "    annotater_batch_1 = annotater_batch[:40]\n",
-    "    annotater_batch_2 = annotater_batch[40:]\n",
+    "    annotater_batch_1 = annotater_batch[:split_idx]\n",
+    "    annotater_batch_2 = annotater_batch[split_idx:]\n",
     "\n",
-    "    with open(\"../batches/new-wiki-1/part1/\" + annotater + \".json\", \"w\") as f:\n",
+    "    with open(f\"../batches/new-wiki-{which_wiki}/part1/{annotater}.json\", \"w\") as f:\n",
     "        json.dump(annotater_batch_1, f, indent=4)\n",
     "\n",
     "    # reindex annotater_batch_2's id from 0\n",
     "    for i, item in enumerate(annotater_batch_2):\n",
     "        item[\"id\"] = i\n",
     "\n",
-    "    with open(\"../batches/new-wiki-1/part2/\" + annotater + \".json\", \"w\") as f:\n",
+    "    with open(f\"../batches/new-wiki-{which_wiki}/part2/{annotater}.json\", \"w\") as f:\n",
     "        json.dump(annotater_batch_2, f, indent=4)"
    ]
   },
@@ -121,7 +111,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('paraphrase')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -135,12 +125,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "51d4b053945bb951b16f24566ff3322f1cf2f2e71937c6e2fa134fa8352168a0"
+    "hash": "81794d4967e6c3204c66dcd87b604927b115b27c00565d3d43f05ba2f3a2cb0d"
    }
   }
  },
