--- a/data/analysis/sensitivity.ipynb
+++ b/data/analysis/sensitivity.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,8 @@
      "text": [
       "0.2682782411698074\n",
       "0.5889995423074248\n",
-      "0.5071608864657479\n"
+      "0.5071608864657479\n",
+      "(0.7714826593972436, 0.75, 0.0, 0.5071608864657479)\n"
      ]
     }
    ],
@@ -82,7 +83,8 @@
     "\n",
     "print(SARIsent(ssent, csent1, rsents))\n",
     "print(SARIsent(ssent, csent2, rsents))\n",
-    "print(SARIsent(ssent, csent3, rsents))"
+    "print(SARIsent(ssent, csent3, rsents))\n",
+    "print(SARIsent(ssent, csent3, rsents, components=True))"
    ]
   },
   {
@@ -469,7 +471,7 @@
     "\n",
     "    # Calculate SARI\n",
     "    # sari_score = sari.compute(sources=[orig], predictions=[prediction], references=[references])['sari']\n",
-    "    score['sari'] = SARIsent(orig, prediction, references)\n",
+    "    score['sari_add'], score['sari_keep'], score['sari_del'], score['sari'] = SARIsent(orig, prediction, references, components=True)\n",
     "\n",
     "    scores += [score]\n",
     "\n",
@@ -825,7 +827,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
