add saving for detailed analysis figures

--- a/data/analysis/sensitivity.ipynb
+++ b/data/analysis/sensitivity.ipynb
@@ -683,6 +683,8 @@
     "plt.xlabel('Our score (Only Quality)')\n",
     "plt.ylabel('Our score (Only Error, negated)')\n",
     "plt.title(f'Error vs. Quality for Error Sentences ({len(pts)} sentences)')\n",
+    "out_filename = f'img/error-vs-quality.svg'\n",
+    "plt.savefig(out_filename, format=\"svg\", bbox_inches='tight', pad_inches=0.0)\n",
     "plt.show()"
    ]
   },
@@ -734,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -983,6 +985,95 @@
     "#             borderpad=0.2)\n",
     "plt.legend(loc='lower right', bbox_to_anchor=(2, 0), frameon=False)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "91.11111111111111\n",
+      "88.88888888888889\n",
+      "48.888888888888886\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the percentile of a score among some systems\n",
+    "from scipy.stats import percentileofscore\n",
+    "system = 'GPT-3-few'\n",
+    "raw_scores = [9, 6.7, 1.46]\n",
+    "i = 0\n",
+    "for dim in ['content', 'syntax', 'lexical']:\n",
+    "    scores = []\n",
+    "    for sent in [x for x in data if system in x['system']]:\n",
+    "        scores += [\n",
+    "            calculate_sentence_score(sent, get_params(f'quality_{dim}')) +\n",
+    "            calculate_sentence_score(sent, get_params(f'error_{dim}'))\n",
+    "        ]\n",
+    "\n",
+    "    percentile_of_3 = percentileofscore(scores, raw_scores[i])\n",
+    "\n",
+    "    i += 1\n",
+    "    print(percentile_of_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65.69767441860465"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_score = 0.617\n",
+    "scores = []\n",
+    "system = 'Human'\n",
+    "for sent in [x for x in data if system in x['system']]:\n",
+    "    simpeval_scores = sent['simpeval_scores']\n",
+    "    if simpeval_scores != None:\n",
+    "        scores += [avg(simpeval_scores)]\n",
+    "percentileofscore(scores, raw_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "93.10344827586206"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_score = 96.4\n",
+    "scores = []\n",
+    "system = 'GPT-3-few'\n",
+    "for sent in [x for x in data if system in x['system']]:\n",
+    "    if sent['da_scores'] != None:\n",
+    "        da_scores = [avg(x.values()) for x in sent['da_scores']]\n",
+    "        scores += [avg(da_scores)]\n",
+    "percentileofscore(scores, raw_score)"
    ]
   },
   {
