add batch 7/8 data

--- a/data/analysis/sensitivity.ipynb
+++ b/data/analysis/sensitivity.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -96,14 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at roberta-large were not used when initializing RobertaModel: ['lm_head.layer_norm.bias', 'lm_head.decoder.weight', 'lm_head.dense.weight', 'lm_head.dense.bias', 'lm_head.layer_norm.weight', 'lm_head.bias']\n",
+      "Some weights of the model checkpoint at roberta-large were not used when initializing RobertaModel: ['lm_head.layer_norm.bias', 'lm_head.bias', 'lm_head.layer_norm.weight', 'lm_head.decoder.weight', 'lm_head.dense.bias', 'lm_head.dense.weight']\n",
       "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -119,7 +119,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad288a7779b64014886a1e9f2b395f77",
+       "model_id": "7b86deb5a1c445e0b115d0bd439a3158",
        "version_major": 2,
        "version_minor": 0
       },
@@ -140,7 +140,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b7b79d6cb47448588bb9b7ddb287e47",
+       "model_id": "0cef1b9a65ee4f7ca6fa6253cb8d93c1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -155,7 +155,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "done in 0.09 seconds, 32.58 sentences/sec\n",
+      "done in 3.49 seconds, 0.86 sentences/sec\n",
       "0.87\n"
      ]
     }
@@ -251,6 +251,101 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Toy Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.35050527719306973\n",
+      "0.17490733920105417\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at roberta-large were not used when initializing RobertaModel: ['lm_head.layer_norm.bias', 'lm_head.bias', 'lm_head.layer_norm.weight', 'lm_head.decoder.weight', 'lm_head.dense.bias', 'lm_head.dense.weight']\n",
+      "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "calculating scores...\n",
+      "computing bert embedding.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "77640baa09fb4e3ab07e51d98dbda3cf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computing greedy matching.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bdbe8f2f01504579b9522847ebf01549",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done in 0.16 seconds, 12.63 sentences/sec\n",
+      "0.93\n"
+     ]
+    }
+   ],
+   "source": [
+    "source = \"On the fifth day of flight, November 20, 2022, at 19:09 UTC, the Orion spacecraft entered the Lunar sphere of influence, thus the Moon's gravitational force became stronger than Earth's relative to the spacecraft.\"\n",
+    "simplification = \"On November 20, 2022, the Orion spacecraft started to be affected by the Moon's gravity more than Earth's. This happened at 19:09 UTC, after five days of flight.\"\n",
+    "references = [\n",
+    "    \"On the fifth day of flight, the Orion spaceship entered the Lunar sphere of influence. This means that the Moon's gravitational force could influence the spaceship more than the Earth's.\",\n",
+    "    \"On November 20, 2022, at 19:09 UTC, the Orion spacecraft entered the Lunar sphere of influence. This meant that the Moon was pulling the spacecraft with more gravitational force than the Earth.\"\n",
+    "]\n",
+    "\n",
+    "print(SARIsent(source, simplification, references))\n",
+    "print(BLEUsent(simplification, references))\n",
+    "print(BERTSCOREsent(simplification, references))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -259,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
