--- a/data/analysis/analysis.ipynb
+++ b/data/analysis/analysis.ipynb
@@ -11,7 +11,7 @@
      "text": [
       "Loading files: ['../annotated/batch_5_anton.json', '../annotated/batch_5_ayush.json', '../annotated/batch_5_kelly.json', '../annotated/batch_5_rachel.json', '../annotated/batch_5_vinayak.json', '../annotated/batch_5_vishnesh.json', '../annotated/batch_6_anton.json', '../annotated/batch_6_ayush.json', '../annotated/batch_6_kelly.json', '../annotated/batch_6_rachel.json', '../annotated/batch_6_vinayak.json', '../annotated/batch_6_vishnesh.json', '../annotated/batch_7_anton.json', '../annotated/batch_7_ayush.json', '../annotated/batch_7_kelly.json', '../annotated/batch_7_rachel.json', '../annotated/batch_7_vinayak.json', '../annotated/batch_7_vishnesh.json', '../annotated/batch_8_ayush.json', '../annotated/batch_8_kelly.json', '../annotated/batch_8_rachel.json', '../annotated/batch_8_vinayak.json', '../annotated/batch_8_vishnesh.json', '../annotated/batch_9_kelly.json']\n",
       "\n",
-      "Found users: {'anton', 'vishnesh', 'rachel', 'ayush', 'kelly', 'vinayak'}\n",
+      "Found users: {'ayush', 'rachel', 'kelly', 'vishnesh', 'vinayak', 'anton'}\n",
       "\n",
       "anton - Batch 5, HIT 38 (ID 37) has 2 deletion edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
       "vinayak - Batch 6, HIT 16 (ID 45) has 1 insertion edits but -1 annotations. Likely a missing annotation. Skipping edit type...\n",
@@ -83,6 +83,52 @@
     "edit_types = set(data[0]['annotations'].keys())\n",
     "\n",
     "# TODO: trivial edits on substitutions aren't being processed correctly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vinayak - Batch 7, HIT 2 (ID 154)\n",
+      "vishnesh - Batch 7, HIT 18 (ID 165)\n",
+      "anton - Batch 7, HIT 23 (ID 170)\n",
+      "vishnesh - Batch 7, HIT 31 (ID 170)\n",
+      "vishnesh - Batch 7, HIT 48 (ID 215)\n",
+      "rachel - Batch 7, HIT 27 (ID 246)\n",
+      "vishnesh - Batch 8, HIT 4 (ID 246)\n",
+      "vishnesh - Batch 8, HIT 10 (ID 251)\n",
+      "vishnesh - Batch 8, HIT 23 (ID 257)\n",
+      "rachel - Batch 7, HIT 44 (ID 262)\n",
+      "vishnesh - Batch 8, HIT 28 (ID 269)\n",
+      "rachel - Batch 8, HIT 2 (ID 286)\n",
+      "vishnesh - Batch 8, HIT 46 (ID 354)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find an example sentence\n",
+    "for sent in data:\n",
+    "    if 'GPT-3-few-shot' not in sent['system']:\n",
+    "        continue \n",
+    "\n",
+    "    errors = [a for a in sent['processed_annotations'] if a['error_type'] is not None]\n",
+    "\n",
+    "    # Aim for 2-4 errors\n",
+    "    if len(errors) < 2:\n",
+    "        continue\n",
+    "\n",
+    "    # Exclude longer sentences\n",
+    "    if len(sent['original']) > 200:\n",
+    "        continue\n",
+    "\n",
+    "    print(get_sent_info(sent))\n",
+    "\n",
+    "# Our Winner is: anton - Batch 7, HIT 23 (ID 170)"
    ]
   },
   {
