--- a/data/analysis/analysis.ipynb
+++ b/data/analysis/analysis.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -106,12 +106,15 @@
       "rachel - Batch 7, HIT 44 (ID 262)\n",
       "vishnesh - Batch 8, HIT 28 (ID 269)\n",
       "rachel - Batch 8, HIT 2 (ID 286)\n",
-      "vishnesh - Batch 8, HIT 46 (ID 354)\n"
+      "vishnesh - Batch 8, HIT 46 (ID 354)\n",
+      "anton - Batch 7, HIT 23 (ID 170)\n",
+      "Average score: 97.44\n"
      ]
     }
    ],
    "source": [
     "# Find an example sentence\n",
+    "found = []\n",
     "for sent in data:\n",
     "    if 'GPT-3-few-shot' not in sent['system']:\n",
     "        continue \n",
@@ -127,8 +130,13 @@
     "        continue\n",
     "\n",
     "    print(get_sent_info(sent))\n",
+    "    found += [sent]\n",
     "\n",
-    "# Our Winner is: anton - Batch 7, HIT 23 (ID 170)"
+    "# Our Winner is: anton - Batch 7, HIT 23 (ID 170)\n",
+    "example = found[2]\n",
+    "print(get_sent_info(found[2]))\n",
+    "\n",
+    "print(f\"Average score: {avg([avg(x.values()) for x in example['da_scores']])}\")"
    ]
   },
   {
